Change overflow to visible to fix TrustCard clipping. Update meta keywords.

--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -213,7 +213,7 @@ form, input {
 
 #main {
 	margin-top: 20px;
-	overflow: hidden;
+	overflow: visible;
 }
 
 #listing_form_wrapper {
